--- a/OPrime-Android-Tutorial/res/values/strings.xml
+++ b/OPrime-Android-Tutorial/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Tutorial</string>
+    <string name="app_name">JDV2014</string>
     <string name="alert_dialog_cancel">Cancel</string>
     <string name="alert_dialog_ok">OK</string>
     <string name="alert_dialog_text_entry">Participant details dialog</string>
